tdf#89999: Fix ODF export of sub|superscript text

it needs special treatment due to 1 attribute but 2 different MIDs,
much like under|overline (fcf5b5c081ded93b) and fonts (48eccfb812284f4)

Change-Id: Ib336e8d4de0c3833103d8d13b64971f7c15c725c
Reviewed-on: https://gerrit.libreoffice.org/20702
Reviewed-by: Eike Rathke <erack@redhat.com>
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>
Tested-by: Katarina Behrens <Katarina.Behrens@cib.de>